feat: add-problem returns ProblemDetailsResponse
#218
